@@ -1,21 +1,21 @@
-FROM maven:3.6.1-jdk-8 as builder
+FROM maven:3.6-ibmjava-8-alpine
 # create app folder for sources
+ENV APP_HOME /app
+
+ENV JAVA_OPTS "-Xmx300m -XX:+UseCGroupMemoryLimitForHeap"
 RUN mkdir -p /build
 WORKDIR /build
 COPY pom.xml /build
+
 #Download all required dependencies into one layer
 RUN mvn -B dependency:resolve dependency:resolve-plugins
 #Copy source code
 COPY src /build/src
 # Build application
-RUN mvn package
-
-
-FROM maven:3.6.1-jdk-8 as runtime
+RUN mvn clean package
 #Set app home folder
-ENV APP_HOME /app
+
 #Possibility to set JVM options (https://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html)
-ENV JAVA_OPTS=""
 #Create base app folder
 RUN mkdir $APP_HOME
 #Create folder to save configuration files
@@ -24,9 +24,9 @@ RUN mkdir $APP_HOME/config
 RUN mkdir $APP_HOME/log
 VOLUME $APP_HOME/log
 VOLUME $APP_HOME/config
-WORKDIR $APP_HOME
+
 #Copy executable jar file from the builder image
-COPY --from=builder /build/target/*.jar app.jar
+COPY  /target/*.jar app.jar
 ENTRYPOINT [ "java -Dserver.port=$PORT $JAVA_OPTS -jar app.jar" ]
 #Second option using shell form:
 
